<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#DA031C"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/user_image"
            android:src="@drawable/quavo" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/profile_image"
            android:fontFamily="@font/bungee"
            android:includeFontPadding="false"
            android:text="@string/user_display_username_title"
            android:textColor="#B5ACAC"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_name"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/profile_image"
            android:includeFontPadding="false"
            android:text="@string/text_under_top_user"
            android:textColor="#B5ACAC"
            android:textSize="14sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:elevation="10dp"
            app:cardBackgroundColor="#DA031C">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/headset_icon"
                    app:srcCompat="@drawable/ic_headset" />

                <TextView
                    android:id="@+id/songs_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/bungee"
                    android:includeFontPadding="false"
                    android:text="@string/number_of_songs"
                    android:textColor="#B5ACAC"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/songs_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/songs_label"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:text="@string/songs_number"
                    android:textColor="#B5ACAC"
                    android:textSize="14sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:elevation="10dp"
            app:cardBackgroundColor="#DA031C">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/heart_icon"
                    app:srcCompat="@drawable/ic_favorite" />

                <TextView
                    android:id="@+id/favorites_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/bungee"
                    android:includeFontPadding="false"
                    android:text="@string/favourite_number"
                    android:textColor="#B5ACAC"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/favorites_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/favorites_label"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:text="@string/number_of_favourite"
                    android:textColor="#B5ACAC"
                    android:textSize="20sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/full_name_hint">

            <TextView
                android:id="@+id/fullName_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:text="@string/full_name_text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/user_name_hint">

            <TextView
                android:id="@+id/user_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:text="@string/user_username" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email_hint">

            <TextView
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:text="" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/password_hint">

            <TextView
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_open"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:text="@string/password_fill_text" />


        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</LinearLayout>