<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/media_player_bg"
    tools:context=".Fragments.MediaPlayerFragment">

    <LinearLayout
        android:id="@+id/media_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_song_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/songimage"
            android:src="@drawable/image" />

        <TextView
            android:id="@+id/tv_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/title_fill_text"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/tv_song_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tv_elapsed_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/timer_start"
                android:textColor="#0CCDCD"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_remaining_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/timer_end"
                android:textColor="#0CCDCD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <SeekBar
            android:id="@+id/sb_song_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btn_shuffle"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/shuffle_off"
                app:layout_constraintBottom_toTopOf="@id/btn_previous"
                app:layout_constraintEnd_toEndOf="@id/btn_previous"
                app:layout_constraintStart_toStartOf="@id/btn_previous"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_favorite"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/empty_heart"
                app:layout_constraintBottom_toTopOf="@id/btn_next"
                app:layout_constraintEnd_toEndOf="@id/btn_next"
                app:layout_constraintStart_toStartOf="@id/btn_next"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:background="@drawable/previous_song"
                app:layout_constraintBottom_toBottomOf="@id/btn_play_or_pause"
                app:layout_constraintEnd_toStartOf="@id/btn_play_or_pause"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_play_or_pause" />

            <Button
                android:id="@+id/btn_play_or_pause"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:background="@drawable/start_song"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_next"
                app:layout_constraintStart_toEndOf="@id/btn_previous"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:background="@drawable/next_song"
                app:layout_constraintBottom_toBottomOf="@id/btn_play_or_pause"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_play_or_pause"
                app:layout_constraintTop_toTopOf="@id/btn_play_or_pause" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>